<resources>
    <string name="app_name">TravelAdmin</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="akun">Akun</string>
    <string name="order">Order</string>
    <string name="data_sopir">Data Sopir</string>
    <string name="hai">HAI,</string>
    <string name="jakarta">Jakarta</string>
    <string name="bandung">Bandung</string>
    <string name="bekasi">Bekasi</string>
    <string name="tangerang">Tangerang</string>
    <string name="batang">Batang</string>
    <string name="semarang">Semarang</string>
    <string name="pekalongan">Pekalongan</string>
    <string name="cirebon">Cirebon</string>
    <string name="jogja">Jogja</string>
    <string name="sukabumi">Sukabumi</string>
    <string name="malang">Malang</string>
    <string name="surabaya">Surabaya</string>
    <string name="daftar_order">Daftar Order</string>
    <string name="kota">Kota</string>
    <string name="tiket_kosong">Ups, Tiket untuk ke kota ini masih kosong</string>
    <string name="daftar_resto">Daftar Resto</string>
    <string name="daftar_sopir">Daftar Sopir</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="armada">Armada</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="hp">Hp : </string>
    <string name="nama">Nama :</string>
    <string name="masuk_sebagai_sopir">Masuk Sebagai Sopir</string>
</resources>