<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.ArmadaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_rounded_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:weightSum="4"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jakarta"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bandung"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bekasi"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tangerang"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>




            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:weightSum="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/batang"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/semarang"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pekalongan"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cirebon"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>



            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:weightSum="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sukabumi"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jogja"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malang"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_monas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/surabaya"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>