<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".ui.fragment.ListOrderFragment">

    <ImageView
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:srcCompat="@drawable/bg_shape_green_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/daftar_order"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_shape_green_half_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


            <LinearLayout
                android:weightSum="3"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/iv_Jakarta"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jakarta"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_bandung"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bandung"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_bekasi"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bekasi"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_tangerang"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tangerang"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>




                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/iv_batang"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/batang"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_semarang"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semarang"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_pekalongan"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pekalongan"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_cirebon"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cirebon"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>



                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/iv_sukabumi"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sukabumi"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_jogja"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jogja"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_malang"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/malang"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/iv_surabaya"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/ic_monas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/surabaya"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>